--- a/Documentation/Leitrechner_Doku.html
+++ b/Documentation/Leitrechner_Doku.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -560,7 +560,7 @@ In der Database Mananger Klasse haben wir ein getNewAuftraege Methode, welche al
 <p>Es wird ein Verbindung zum Socket Client aufgebaut.</p>
 <div class="listingblock">
 <div class="content">
-<pre class="prettyprint highlight"><code data-lang="java">    public static void openConnection() {
+<pre class="prettyprint highlight linenums"><code data-lang="java">    public static void openConnection() {
         try (ServerSocket sv = new ServerSocket(43000)) {
             Socket connection = sv.accept();
             ...
@@ -582,7 +582,7 @@ In der Database Mananger Klasse haben wir ein getNewAuftraege Methode, welche al
 <div class="ulist">
 <ul>
 <li>
-<p>Socket Client</p>
+<p>Socket Server</p>
 </li>
 </ul>
 </div>
@@ -591,11 +591,17 @@ In der Database Mananger Klasse haben wir ein getNewAuftraege Methode, welche al
 <div class="sect3">
 <h4 id="_socket_client">2.1.5. Socket Client</h4>
 <div class="sect4">
-<h5 id="_probleme_3">2.1.5.1. Probleme</h5>
+<h5 id="_zweck_des_socket_servers_2">2.1.5.1. Zweck des Socket Servers</h5>
+<div class="paragraph">
+<p>Der Socket Client baut eine Verbinung mit dem Socket Server auf, bekommt dadurch neue Aufträge, und sendet an die Fertigungsstraße weiterzuleiten.</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_probleme_3">2.1.5.2. Probleme</h5>
 <div class="ulist">
 <ul>
 <li>
-<p>Socket Server</p>
+<p>Json convertiertung</p>
 </li>
 </ul>
 </div>
@@ -611,7 +617,7 @@ In der Database Mananger Klasse haben wir ein getNewAuftraege Methode, welche al
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-06-27 09:45:59 +0200
+Last updated 2022-06-27 11:05:44 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
