--- a/Documentation/Leitrechner_Doku.html
+++ b/Documentation/Leitrechner_Doku.html
@@ -555,7 +555,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Datenbanksystem:</p>
 <div class="paragraph">
-<p>Wir verwenden eine MySql Datenbank die auf Devel1 erreichbar ist.
+<p>Wir verwenden eine <a href="https://www.mysql.com/de/">MySql</a> Datenbank die auf <a href="http://devel1/phpmyadmin/">Devel1</a> erreichbar ist.
 Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benötigen wir nur die Aufträge und Produkte.</p>
 </div>
 </li>
@@ -588,10 +588,53 @@ Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benöti
 <p>Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <a href="#_database_manager">Database Manager</a>) über die Konsole an den Client.</p>
 </li>
 <li>
-<p>Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten zu bekommen oder "exit" um den Client und Server zu beenden, zurück.</p>
+<p>Nachdem der Auftrag fertig produziert wurde, sendet der Cient die Auftragsnummer des produzierten Produkts und einen Status, z. B. "bereit" um den nächsten Auftrag zu bekommen oder "exit" um den Client und Server zu beenden, zurück.</p>
+<div class="listingblock">
+<div class="content">
+<pre class="prettyprint highlight"><code data-lang="java">while (!stop) {
+    // Wenn keine offenen Aufträge in der Liste sind holl alle neuen offenen aus der DB
+    if (orders.size() == 0) {
+        orders = DatabaseManager.getNewAuftrage(lastRead);
+    }
+    // Lese Nachricht vom Client
+    answer = input.readLine();
+    System.out.println("Input: " + answer);
+    // Wenn jemand manuell "" sendet oder einfach Enter drückt
+    if (answer == null) {
+        output.println("Bitte Status senden!");
+    // Wenn der Client exit sendet wird unser Programm auch "beendet"
+    // bzw. er geht aus der while Schleife raus, aber danach passiert nichts mehr
+    } else if (answer.contains("exit")) {
+        stop = true;
+
+    // Dies sollte nur beim ersten mal senden vorkommen
+    } else if(answer.equals("bereit")){
+        orderMsg = getMessage();
+        System.out.println("Output: " + orderMsg);
+        output.println(orderMsg);
+    // Der Status wird in der DB aktuallisiert,
+    // der fertige Auftrag aus der Liste entfernt,
+    // der neue Auftrag wird aus der Liste geholt und an den Client gesendet.
+    } else if (answer.contains("bereit")) {
+        DatabaseManager.setStatus(answer.split(";")[0], "fertig");
+        orders.remove(0);
+        orderMsg = getMessage();
+        System.out.println("Output: " + orderMsg);
+        output.println(orderMsg);
+
+    } else if (answer.contains("lauft")){
+        System.out.println("läuft");
+    // Wenn nichts zutrifft, mach weiter
+    } else {
+        continue;
+    }
+    oldOrder = orders.get(0);
+}</code></pre>
+</div>
+</div>
 </li>
 <li>
-<p>Ab dem zweiten "bereit" (erstes "bereit" ist um den Vorgang zu starten), dass der Server bekommt wird der Status des fertigen Produkts in der Datenbank auf "fertig" gesetzt.</p>
+<p>Wenn ein "bereit" gesendet wird, wird in der Datenbank der Status des Auftrag mit der gesendeten Id auf "fertig" gesetz und der nächste Auftrag an den Client geschickt.</p>
 </li>
 </ol>
 </div>
@@ -606,7 +649,7 @@ Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benöti
 </div>
 <div class="paragraph">
 <p>Der Webservice speichert die Aufträge die vom <strong>JavaFX Client</strong>, der <strong>Android App</strong> und der <strong>Webpage</strong> gesendet werden und speichert diese in der Datenbank.<br>
-Wir holen die noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.</p>
+Wir holen alle noch offenen Aufträge aus der Datenbank und senden diese dann an die Fertigungsstraße. Sobald der Auftrag dort verarbeitet wurde, kriegen wir eine Rückmeldung und ändern den Status des Auftrags in der Datenbank.</p>
 </div>
 </div>
 </div>
@@ -625,7 +668,10 @@ In der Database Mananger Klasse haben wir ein <strong>getNewAuftraege</strong> M
 <div class="ulist">
 <ul>
 <li>
-<p>Wir haben versucht ein Sql Statement zu schreiben welches die Parameter weglässt zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt zur Laufzeit zusammenzubauen.</p>
+<p>Beim Start des Programms, wird um die Kommunikation zu starten ein "beginn" vom Client zum Server gesendet. Allerdings ist hinter dem "beginn" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden.</p>
+</li>
+<li>
+<p>Wir haben versucht ein Sql Statement zu schreiben welches die Parameter ignoriert zu denen kein wert zugordet ist, allerdings hat dies nach langen testen und probieren nicht funktionet. Deswegen haben wir uns dazu entschieden ein Sql Statemnt abhängig von übergebenen Parametern zusammenzubauen.</p>
 </li>
 </ul>
 </div>
